# gameimage

./: .dockerignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md
.github/workflows/: default.yml  on-release.yml
deploy/: Dockerfile.alpine.backend  Dockerfile.alpine.wizard  Dockerfile.arch.launcher  Dockerfile.backend.build  Dockerfile.backend.dev  Dockerfile.launcher.build  Dockerfile.launcher.dev  Dockerfile.wizard.build  Dockerfile.wizard.dev  conandata.yml  deploy-flatimage.sh  deploy.sh  flatimage-alpine.sh  libraries-wizard.txt  makeself-gameimage.sh  makeself-wizard.sh  preload-sandbox.c
doc/: example-gui.xcf  toc.sh
gui/: Cargo.toml
gui/launcher/: Cargo.toml
gui/launcher/src/: common.rs  dimm.rs  games.rs  main.rs  mounts.rs  scaling.rs  svg.rs
gui/launcher/src/db/: env.rs  project.rs
gui/launcher/src/frame/: cover.rs  env.rs  executables.rs  fail.rs  menu.rs  mod.rs  selector.rs  selector_executable.rs  selector_game.rs
gui/launcher/src/frame/menu/: enabler_executable.rs  environment.rs  executables.rs
gui/menu-button/: Cargo.toml
gui/menu-button/src/: main.rs
gui/shared/: Cargo.toml
gui/shared/src/: dimm.rs  fltk.rs  image.rs  lib.rs  std.rs  svg.rs
gui/shared/src/db/: kv.rs
gui/shared/src/fltk/: button.rs  dialog.rs  frame.rs  macros.rs  paginator.rs  progress.rs  scale.rs  separator.rs
gui/wizard/: Cargo.toml
gui/wizard/src/: common.rs  dimm.rs  download.rs  main.rs  svg.rs  wine.rs
gui/wizard/src/db/: arg.rs  env.rs  fetch.rs  global.rs  mod.rs  project.rs  search.rs
gui/wizard/src/frame/: common.rs  creator.rs  desktop.rs  fetch.rs  finish.rs  icon.rs  mod.rs  name.rs  platform.rs  term.rs  welcome.rs
gui/wizard/src/frame/wizard/: compress.rs  icon.rs  install.rs  mod.rs  name.rs  pcsx2.rs  retroarch.rs  rom.rs  rpcs3.rs  test.rs  wine.rs  yuzu.rs
gui/wizard/src/gameimage/: desktop.rs  fetch.rs  gameimage.rs  init.rs  install.rs  mod.rs  package.rs  project.rs  search.rs  select.rs  test.rs
gui/wizard/src/lib/: dimm.rs  download.rs  ipc.rs  mod.rs  scaling.rs  svg.rs
gui/wizard/src/wizard/: compress.rs  icon.rs  install.rs  linux.rs  mod.rs  name.rs  pcsx2.rs  retroarch.rs  rpcs3.rs  ryujinx.rs  test.rs  wine.rs  yuzu.rs
src/: CMakeLists.txt  Dockerfile  build.sh  common.hpp  common.sh  conanfile.txt  enum.hpp  macro.hpp  main.cpp  main.sh  package.hpp  pcsx2.sh  retroarch.sh  rpcs3.sh  validate.hpp  wine.sh  yuzu.sh
src/boot/: boot.cpp  wine.cpp
src/cmd/: boot.hpp  compress.hpp  default.hpp  desktop.hpp  fetch.hpp  init.hpp  install.hpp  package.hpp  project.hpp  search.hpp  select.hpp  target.hpp  test.hpp
src/cmd/fetch/: check.hpp
src/lib/: db.hpp  hope.hpp  image.hpp  ipc.hpp  json.hpp  log.hpp  parser.hpp  sha.hpp  subprocess.hpp  tar.hpp  zip.hpp
src/lib/db/: build.hpp  fetch.hpp  global.hpp  project.hpp
src/std/: concepts.hpp  copy.hpp  env.hpp  exception.hpp  fifo.hpp  filesystem.hpp  string.hpp  vector.hpp
thumbnailer/: appimage.thumbnailer  install.sh  thumbnailer-appimage
