[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
fltk = { version = "1.4", features = ["use-wayland"] }
fltk-theme = "0.6.0"
fltk-evented = "0.5"
display-info = "0.4.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10.3"
sysinfo = "0.30.7"
walkdir = "2.5.0"
once_cell = "1.19.0"
