[package]
name = "gameimage-install-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.3"
fltk-theme = "0.6.0"
serde = "1.0"
serde_yaml = "0.9"
closure = "0.3.0"
duct = "0.13.5"
walkdir = "2"
regex = "1"
