[package]
name = "wizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
fltk = { version = "1.4", features = ["use-wayland"] }
fltk-theme = "0.6.0"
fltk-grid = "0.4"
fltk-evented = "0.5"
serde_yaml = "0.9"
closure = "0.3.0"
walkdir = "2"
url = "2.5.0"
anyhow = "1.0"
sha256 = "1.5.0"
rust_search = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image_search = { version = "0.4.3", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19.0"
sysinfo = "0.30.7"
regex = "1.10.3"
libc = "0.2.153"
errno = "0.3.8"
lazy_static = "1.5.0"
